--- a/views/index.erb
+++ b/views/index.erb
@@ -7,18 +7,18 @@
 <title>Timer</title>
 
 
-<link rel="stylesheet" href="css/normalize.css" type="text/css">
-<link rel="stylesheet" href="css/timer.css" type="text/css">
+<link rel="stylesheet" href="/css/normalize.css" type="text/css">
+<link rel="stylesheet" href="/css/timer.css" type="text/css">
 
 <style type='text/css'>
 
 
 </style>
 
-<script src="js/mootools-core-1.4.5.js" type="text/javascript"></script>
-<script src="js/js-lib.js" type="text/javascript"></script>
-<script src="js/jstable.js" type="text/javascript"></script>
-<script src="js/timer.js" type="text/javascript"></script>
+<script src="/js/mootools-core-1.4.5.js" type="text/javascript"></script>
+<script src="/js/js-lib.js" type="text/javascript"></script>
+<script src="/js/jstable.js" type="text/javascript"></script>
+<script src="/js/timer.js" type="text/javascript"></script>
 
 <script type='text/javascript'>
 
