test save of the json content on load

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,6 +22,8 @@
 
 <script type='text/javascript'>
 
+var _js = <%== js.to_json %>
+
 window.addEvent('domready', function() {
 	var _timer = new Timer('js-timer');
 });
